--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches:
     - 'main'
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 */8 * *'
 
 env:
   DOCKER_USERNAME: fr3akyphantom
